k8s/punto-05-06-07/name1/deployment-apipersona-gke.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: apipersona
  namespace: name1
  labels:
    app: apipersona
    version: v1
spec:
  selector:
    matchLabels:
      app: apipersona
      version: v1
  replicas: 2
  template:
    metadata:
      labels:
        app: apipersona
        version: v1
    spec:
      nodeSelector:
        node: workloads
      containers:
      - image: cgarciar29/k8s-api-persona
        imagePullPolicy: IfNotPresent
        name: api
        ports:
        - containerPort: 8080
          protocol: TCP
        livenessProbe:
            httpGet:
              path: /actuator/health/liveness
              port: 8080
            initialDelaySeconds: 30
            timeoutSeconds: 5
            periodSeconds: 10
            failureThreshold: 5
            successThreshold: 1
        readinessProbe:
            httpGet:
              path: /actuator/health/readiness # puede ser solo la raiz "/", probar esto en caso no funcione en azure application gateway
              port: 8080
            initialDelaySeconds: 40
            timeoutSeconds: 5
            periodSeconds: 5
---
apiVersion: v1
kind: Service
metadata:
  name: apipersona-cip
  labels:
    app: apipersona-cip
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    app: apipersona
  type: ClusterIP
