k8s/punto-05-06-07/name1/deployment-bd.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bdapipersona
  namespace: name1
  labels:
    version: v1
spec:
  selector:
    matchLabels:
      app: bdapipersona
  replicas: 1
  template:
    metadata:
      labels:
        app: bdapipersona
        version: v1
    spec:
      nodeSelector:
        node: workloads
      containers:
      - image: cgarciar29/k8s-api-persona-bd
        imagePullPolicy: IfNotPresent
        name: main
        ports:
        - containerPort: 3306
          protocol: TCP
        readinessProbe:
          tcpSocket:
            port: 3306
          initialDelaySeconds: 15
          periodSeconds: 20
---
apiVersion: v1
kind: Service
metadata:
  name: mysql
spec:
  ports:
  - port: 3306
    name: mysql
    protocol: TCP
    targetPort: 3306
  selector:
    app: bdapipersona
  type: ClusterIP
