k8s/punto-05-06-07/name1/ingress-apipersona.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: apipersona
  annotations:
    # https://cloud.google.com/kubernetes-engine/docs/how-to/load-balance-ingress#ingress_annotations
spec:
  rules:
  - http:
      paths:
      - path: /api/personas
        pathType: Prefix
        backend:
          service: 
            name: apipersona-cip
            port: 
              number: 80
